--- a/Paginas/Cadastro.html
+++ b/Paginas/Cadastro.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Login / Cadastro</title>
-  <link rel="icon" href="img/LOGO.png" type="image/png">
+  <link rel="icon" href="../img/LOGO.png" type="image/png">
   <link rel="stylesheet" href="style/Cadastro.css">
 </head>
 <body>
@@ -60,7 +60,7 @@
     </div>
   </div>
 </div>
-<br><br><br>
+<br><br><br><br><br><br>
 <div id="footer-container"></div>
 <img src="../Componentes/Header.html" alt="">
   <script>
