--- a/Paginas/Perfil.html
+++ b/Paginas/Perfil.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Perfil</title>
-  <link rel="icon" href="img/LOGO.png" type="image/png">
+  <link rel="icon" href="../img/LOGO.png" type="image/png">
   <link rel="stylesheet" href="style/Perfil.css">
 </head>
 <body>
 <div id="header-container"></div>
 
   <div class="perfil-topo">
-    <img src="" alt="" id="fotoPerfil" onclick="editarFoto()" title="Clique para trocar a foto">
+    <img src="../img/perfil.jpg" alt="" id="fotoPerfil" onclick="editarFoto()" title="Clique para trocar a foto">
     <div class="info">
       <h2 id="nomeUsuario">
         Eduarda Rodrigues
