--- a/Paginas/destaques.html
+++ b/Paginas/destaques.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destaques</title>
-    <link rel="icon" href="img/LOGO.png" type="image/png">
+  <link rel="icon" href="../img/LOGO.png" type="image/png">
     <link rel="stylesheet" href="style/Destaque.css">
 </head>
 <body>
@@ -85,7 +85,7 @@
      fetch('../Componentes/Header.html')
     .then(response => response.text())
     .then(data => {
-      document.getElementById('header-container').innerHTML = data;
+      document.getElementById('Header-container').innerHTML = data;
     })
 
     
