--- a/Paginas/BEBES.html
+++ b/Paginas/BEBES.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roupas de bebe</title>
-  <link rel="icon" href="img/LOGO.png" type="image/png">
+  <link rel="icon" href="../img/LOGO.png" type="image/png">
   <link rel="stylesheet" href="style/Categorias.css">
 </head>
 <body>
