--- a/Paginas/Meninas.html
+++ b/Paginas/Meninas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roupas de Meninas</title>
-  <link rel="icon" href="img/LOGO.png" type="image/png">
+  <link rel="icon" href="../img/LOGO.png" type="image/png">
   <link rel="stylesheet" href="style/Categorias.css">
 
 </head>
@@ -16,10 +16,7 @@
     <div class="modal" style="background:white; padding:20px; border-radius:16px; max-width:600px; width:90%; position:relative;">
       <button onclick="fecharModal()" style="position:absolute; top:10px; right:20px; background:none; border:none; font-size:18px; cursor:pointer;">&#10006;</button>
       <img id="modalImagem" src="" alt="" style="width:100%; max-height:300px; object-fit:contain; border-radius:10px;">
-      <div style="text-align:center; margin:10px 0;">
-        <button onclick="mudarImagem(-1)">◀</button>
-        <button onclick="mudarImagem(1)">▶</button>
-      </div>
+      
       <h2 id="modalNome"></h2>
       <p id="modalPreco"></p>
       <p id="modalDescricao"></p>
