--- a/Paginas/Meninos.html
+++ b/Paginas/Meninos.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roupas de Meninos</title>
-  <link rel="icon" href="img/LOGO.png" type="image/png">
+  <link rel="icon" href="../img/LOGO.png" type="image/png">
   <link rel="stylesheet" href="style/Categorias.css">
 
 
@@ -17,14 +17,15 @@
     <div class="modal" style="background:white; padding:20px; border-radius:16px; max-width:600px; width:90%; position:relative;">
       <button onclick="fecharModal()" style="position:absolute; top:10px; right:20px; background:none; border:none; font-size:18px; cursor:pointer;">&#10006;</button>
       <img id="modalImagem" src="" alt="" style="width:100%; max-height:300px; object-fit:contain; border-radius:10px;">
-      <div style="text-align:center; margin:10px 0;">
+      <!-- <div style="text-align:center; margin:10px 0;">
         <button onclick="mudarImagem(-1)">◀</button>
         <button onclick="mudarImagem(1)">▶</button>
-      </div>
+      </div> -->
       <h2 id="modalNome"></h2>
       <p id="modalPreco"></p>
       <p id="modalDescricao"></p>
       <div id="modalTamanhos" style="margin: 10px 0; display: flex; gap: 10px; justify-content: center;"></div>
+      <p>Cores Disponiveis:</p>
       <div id="modalCores" style="margin-bottom:10px;"></div>
       <button class="comprar-modal" style="display:block; margin:auto; padding:10px 20px; background:#65be11; color:#fff; border:none; border-radius:8px; font-weight:bold;">Adicionar no Carrinho</button>
     </div>
